# supersonar

./: .gitignore  LICENSE  README.md  pyproject.toml  supersonar.toml
.github/workflows/: supersonar.yml
supersonar/: __main__.py  baseline.py  cli.py  config.py  coverage.py  models.py  quality_gate.py  reporters.py  scanner.py  security.py  semgrep.py
supersonar/rules/: __init__.py  generic.py  go.py  java.py  javascript.py  kotlin.py  python.py
tests/: test_baseline.py  test_cli.py  test_coverage.py  test_quality_gate.py  test_reporters.py  test_rules_engine.py  test_scanner.py
